--- a/下位机/Template/Project/Project.uvprojx
+++ b/下位机/Template/Project/Project.uvprojx
@@ -562,6 +562,11 @@
               <FileType>1</FileType>
               <FilePath>..\Driver\src\Systick.c</FilePath>
             </File>
+            <File>
+              <FileName>UART.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Driver\src\UART.c</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
