--- a/下位机/Template/Project/Project.uvprojx
+++ b/下位机/Template/Project/Project.uvprojx
@@ -314,7 +314,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>2</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -586,6 +586,16 @@
               <FileName>PUMP.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Driver\src\PUMP.c</FilePath>
+            </File>
+            <File>
+              <FileName>BSP_USART.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Driver\src\BSP_USART.c</FilePath>
+            </File>
+            <File>
+              <FileName>BSP_DMA.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Driver\src\BSP_DMA.c</FilePath>
             </File>
           </Files>
         </Group>
